tests/typefunc_bad_no_matching_overload.stderr
tests/typefunc_bad_no_matching_overload.sl:12:2: error: SL2015: no matching overload
