tests/typefunc_bad_no_matching_overload.sl
struct A {}

struct B {}

fn f(v A) {}

fn f(v B) {}

fn main() {
	var n int
	f(n)
}
